--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -93,31 +93,6 @@ body .nl-page {
     z-index: 3;
     padding-top: 15px;
     transition: all 400ms ease;
-
-    .navbar-items {
-      padding-top: 10px;
-      transition: all 400ms ease;
-    }
-
-    .logo {
-      transition: all 600ms ease;
-      width: 270px;
-    }
-
-    &.navbar-small {
-      background: $white;
-      max-height: 55px;
-      overflow: hidden;
-      padding-top: 10px;
-
-      .logo {
-        width: 150px;
-      }
-
-      .navbar-items {
-        padding-top: 5px;
-      }
-    }
   }
 
   .navbar-items {
@@ -177,6 +152,7 @@ body .nl-page {
       display: flex;
       list-style: none;
       padding-left: 0;
+      margin: 0;
       justify-content: flex-end;
 
       li {
@@ -206,6 +182,14 @@ body .nl-page {
         svg {
           fill: $dark-gray;
         }
+      }
+    }
+
+    .footer-socials {
+      text-align: right;
+
+      ul {
+        margin-top: 10px;
       }
     }
 
